@@ -3,6 +3,6 @@
 @import url('./components/file-list.css');
 @import url('./components/file-item/index.css');
 @import url('./components/file-preview.css');
-@import url('./components/dialogs.css');
-@import url('./components/button/index.css'); /* Updated import path */
+/* Remove dialog.css import as it's no longer needed */
+@import url('./components/button/index.css');
 @import url('./components/theme-switch.css');
