@@ -11,8 +11,33 @@ import iconManager from '../ui/iconManager.js';
  * @param {Event} event - Click event
  */
 function downloadFile(event) {
-    const fileName = event.target.getAttribute('data-name');
-    window.location.href = `${CONFIG.apiEndpoints.download}/${encodeURIComponent(fileName)}`;
+    event.preventDefault();
+    event.stopPropagation();
+    
+    // Get the file name from the clicked button data attribute
+    const button = event.currentTarget;
+    const fileName = button.getAttribute('data-name');
+    
+    if (!fileName) {
+        console.error('No filename found for download');
+        return;
+    }
+    
+    // Create and trigger a download link
+    const downloadUrl = `${CONFIG.apiEndpoints.download}/${encodeURIComponent(fileName)}`;
+    const link = document.createElement('a');
+    link.href = downloadUrl;
+    link.download = fileName; // Use the original filename
+    link.style.display = 'none';
+    
+    // Add to DOM, trigger click, then remove
+    document.body.appendChild(link);
+    link.click();
+    setTimeout(() => {
+        document.body.removeChild(link);
+    }, 100);
+    
+    console.log('Downloading file:', fileName);
 }
 
 /**
@@ -28,56 +53,100 @@ function attachEventListeners() {
         icon.textContent = iconManager.ICON_MAP.copy;
     });
 
+    // Remove any existing event listeners first to prevent duplicates
     document.querySelectorAll('.primary-action').forEach(btn => {
-        btn.addEventListener('click', downloadFile);
+        const newBtn = btn.cloneNode(true);
+        btn.parentNode.replaceChild(newBtn, btn);
+        newBtn.addEventListener('click', downloadFile);
     });
 
     document.querySelectorAll('.copy-preview').forEach(btn => {
-        btn.removeEventListener('click', downloadFile);  // Remove default download handler
-        btn.addEventListener('click', handleCopyClick);
+        const newBtn = btn.cloneNode(true);
+        btn.parentNode.replaceChild(newBtn, btn);
+        newBtn.addEventListener('click', handleCopyClick);
     });
 }
 
 /**
- * Handle copy button click
+ * Handle copy button click - simplified implementation
  * @param {Event} event - Click event
  */
 async function handleCopyClick(event) {
     event.preventDefault();
     event.stopPropagation();
     
-    const fileName = event.target.getAttribute('data-name');
+    const button = event.currentTarget;
+    
+    // Check if button is already in a copied or error state
+    if (button.classList.contains('copied-state') || button.classList.contains('error-state')) {
+        console.log('Button is already in a feedback state - ignoring click');
+        return; // Ignore clicks while in feedback state
+    }
+    
+    const fileName = button.getAttribute('data-name');
+    
+    if (!fileName) {
+        console.error('No filename found for copy');
+        showCopyFeedback(button, false);
+        return;
+    }
     
     try {
         const content = await fileAPI.getFileContent(fileName);
         
-        try {
-            // Use clipboard API without fallback dialog
-            if (navigator.clipboard) {
+        // Try different copy methods in sequence for best compatibility
+        let copySuccessful = false;
+        
+        // Method 1: Modern Clipboard API (most browsers)
+        if (navigator.clipboard && navigator.clipboard.writeText) {
+            try {
                 await navigator.clipboard.writeText(content);
-                showCopyFeedback(event.target, true);
-            } else {
-                // Use document.execCommand as fallback
+                copySuccessful = true;
+                console.log('Copied using Clipboard API');
+            } catch (clipboardErr) {
+                console.warn('Clipboard API failed:', clipboardErr);
+            }
+        }
+        
+        // Method 2: execCommand (fallback for older browsers)
+        if (!copySuccessful) {
+            try {
                 const textarea = document.createElement('textarea');
                 textarea.value = content;
-                textarea.style.position = 'fixed';
-                textarea.style.top = '-9999px';
+                
+                // Make the textarea part of the page so it can be selected
+                textarea.setAttribute('readonly', '');
+                textarea.style.position = 'absolute';
+                textarea.style.left = '-9999px';
+                textarea.style.opacity = '0';
+                
                 document.body.appendChild(textarea);
-                textarea.focus();
-                textarea.select();
                 
-                const successful = document.execCommand('copy');
+                // iOS specific handling
+                if (navigator.userAgent.match(/ipad|ipod|iphone/i)) {
+                    const range = document.createRange();
+                    range.selectNodeContents(textarea);
+                    
+                    const selection = window.getSelection();
+                    selection.removeAllRanges();
+                    selection.addRange(range);
+                    textarea.setSelectionRange(0, content.length);
+                } else {
+                    textarea.select();
+                }
+                
+                copySuccessful = document.execCommand('copy');
                 document.body.removeChild(textarea);
-                
-                showCopyFeedback(event.target, successful);
+                console.log('Copied using execCommand');
+            } catch (execErr) {
+                console.warn('execCommand failed:', execErr);
             }
-        } catch (error) {
-            console.error('Copy failed:', error);
-            showCopyFeedback(event.target, false);
         }
+        
+        showCopyFeedback(button, copySuccessful);
     } catch (error) {
-        console.error('Error copying content:', error);
-        showCopyFeedback(event.target, false);
+        console.error('Error getting content for copy:', error);
+        showCopyFeedback(button, false);
     }
 }
 
@@ -103,23 +172,22 @@ function showCopyFeedback(btn, success) {
     // Get the original HTML from the data attribute
     const originalHTML = btn.getAttribute('data-original-html');
     
-    // Remove any existing event listeners
-    btn.replaceWith(btn.cloneNode(true));
-    const newBtn = document.querySelector(`[data-name="${btn.getAttribute('data-name')}"].copy-preview`);
+    // Clone and replace the button to remove any existing listeners
+    const newBtn = btn.cloneNode(true);
+    btn.parentNode.replaceChild(newBtn, btn);
     btn = newBtn;
     
     if (success) {
         // Use icon from icon manager
         btn.innerHTML = '';
-        btn.appendChild(iconManager.createIcon('check'));
+        const icon = iconManager.createIcon('check');
+        btn.appendChild(icon);
         btn.appendChild(document.createTextNode(' Copied!'));
-        btn.style.backgroundColor = 'var(--md-sys-color-secondary)';
         btn.classList.add('copied-state');
         
         // Reset after delay
         const timeout = setTimeout(() => {
             btn.innerHTML = originalHTML;
-            btn.style.backgroundColor = '';
             btn.classList.remove('copied-state');
             buttonTimeouts.delete(btn);
             
@@ -131,15 +199,15 @@ function showCopyFeedback(btn, success) {
     } else {
         // Use icon from icon manager
         btn.innerHTML = '';
-        btn.appendChild(iconManager.createIcon('warning'));
+        const icon = iconManager.createIcon('warning');
+        btn.appendChild(icon);
         btn.appendChild(document.createTextNode(' Copy Error'));
-        btn.style.backgroundColor = 'var(--md-sys-color-error)';
         btn.classList.add('error-state');
         
-        // Allow clicking to reset immediately
+        // Allow clicking to reset immediately 
+        // Note: This click will just reset the button, not trigger a new copy operation
         btn.addEventListener('click', () => {
             btn.innerHTML = originalHTML;
-            btn.style.backgroundColor = '';
             btn.classList.remove('error-state');
             buttonTimeouts.delete(btn);
             
@@ -152,7 +220,6 @@ function showCopyFeedback(btn, success) {
         // Auto-reset after delay
         const timeout = setTimeout(() => {
             btn.innerHTML = originalHTML;
-            btn.style.backgroundColor = '';
             btn.classList.remove('error-state');
             buttonTimeouts.delete(btn);
             
@@ -166,5 +233,6 @@ function showCopyFeedback(btn, success) {
 
 export default {
     downloadFile,
-    attachEventListeners
+    attachEventListeners,
+    handleCopyClick
 };
