@@ -33,3 +33,8 @@
  
 [23:23:29.71 Wed 03/19/2025] Pushed to branch main 
  
+[ 4:00:15.01 Thu 03/20/2025] fix some animations 
+------------------ Committed 882aec1 to branch main ------------------ 
+ 
+[ 4:00:30.89 Thu 03/20/2025] Pushed to branch main 
+ 
